# ao-cli

./: .gitignore  .mcp.json  .vercelignore  AGENTS.md  CHANGELOG-v0.0.19.md  CHANGELOG-v0.1.1.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  vercel.json
crates/agent-runner/: Cargo.toml  README.md
crates/agent-runner/src/: cleanup.rs  lib.rs  lock.rs  main.rs
crates/animus-plugin-protocol/: Cargo.toml
crates/animus-plugin-protocol/src/: lib.rs
crates/animus-plugin-runtime/: Cargo.toml
crates/animus-plugin-runtime/src/: lib.rs
crates/animus-plugin-smoke/: Cargo.toml
crates/animus-plugin-smoke/src/: main.rs
crates/animus-provider-claude/: Cargo.toml
crates/animus-provider-claude/src/: main.rs
crates/animus-provider-codex/: Cargo.toml
crates/animus-provider-codex/src/: main.rs
crates/animus-provider-gemini/: Cargo.toml
crates/animus-provider-gemini/src/: main.rs
crates/animus-provider-mock/: Cargo.toml
crates/animus-provider-mock/src/: main.rs
crates/animus-provider-protocol/: Cargo.toml
crates/animus-provider-protocol/src/: lib.rs
crates/animus-subject-protocol/: Cargo.toml
crates/animus-subject-protocol/src/: lib.rs
crates/ao-plugin-smoke/: Cargo.toml
crates/ao-plugin-smoke/src/: main.rs
crates/ao-provider-claude/: Cargo.toml
crates/ao-provider-claude/src/: main.rs
crates/ao-provider-mock/: Cargo.toml
crates/ao-provider-mock/src/: main.rs
crates/ao-provider-oai/: Cargo.toml
crates/ao-provider-oai/src/: main.rs
crates/ao-provider-runtime/: Cargo.toml
crates/ao-provider-runtime/src/: lib.rs
crates/llm-cli-wrapper/: Cargo.toml  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  MCP_TEST_RESULTS.md  QUICKSTART.md  README.md  TEST_SUMMARY.md
crates/llm-cli-wrapper/examples/: mcp_integration.rs
crates/llm-cli-wrapper/src/: error.rs  lib.rs  main.rs  mcp_manager.rs
crates/llm-cli-wrapper/tests/: e2e_wrapper_matrix.rs  oai_runner_structured_events.rs
crates/llm-mcp-server/: Cargo.toml
crates/llm-mcp-server/src/: http.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/orchestrator-cli/: Cargo.toml  README.md
crates/orchestrator-cli/config/: default-install.json
crates/orchestrator-cli/docs/: task-002-cli-help-error-implementation-notes.md  task-002-cli-help-error-requirements.md  task-002-cli-help-error-ux-brief.md  task-004-wrapper-mcp-contract-requirements.md  task-006-multi-binary-release-pipeline-implementation-notes.md  task-006-multi-binary-release-pipeline-requirements.md  task-008-json-envelope-contract-implementation-notes.md  task-008-json-envelope-contract-requirements.md  task-009-destructive-command-implementation-notes.md  task-009-destructive-command-requirements.md  task-010-run-event-persistence-lookup-implementation-notes.md  task-010-run-event-persistence-lookup-requirements.md  task-022-guided-onboarding-config-wizard-implementation-notes.md  task-022-guided-onboarding-config-wizard-requirements.md  task-024-versioned-skill-registry-implementation-notes.md  task-024-versioned-skill-registry-requirements.md  task-025-sandbox-tool-policy-implementation-notes.md  task-025-sandbox-tool-policy-requirements.md  task-026-event-notification-connector-framework-implementation-notes.md  task-026-event-notification-connector-framework-requirements.md  task-026-notification-operator-guide.md  task-027-claude-bypass-permissions-default-requirements.md  task-029-agent-runner-env-sanitizer-allowlist-requirements.md  task-030-runner-status-implementation-notes.md  task-030-runner-status-requirements.md  task-030-runner-status-research-notes.md  task-031-sanitize-scope-and-error-classification-implementation-notes.md  task-031-sanitize-scope-and-error-classification-requirements.md  task-034-typed-error-classification-implementation-notes.md  task-034-typed-error-classification-requirements.md  task-036-dependency-hygiene-axum-alignment-implementation-notes.md  task-036-dependency-hygiene-axum-alignment-requirements.md  task-037-merge-conflict-auto-resolution-implementation-notes.md  task-037-merge-conflict-auto-resolution-requirements.md  task-039-daemon-events-mcp-observability-implementation-notes.md  task-039-daemon-events-mcp-observability-requirements.md  task-041-cli-types-web-api-service-modularization-implementation-notes.md  task-041-cli-types-web-api-service-modularization-requirements.md  task-042-auto-rebuild-runner-on-main-update-requirements.md  task-042-auto-rebuild-runner-on-main-update-research-notes.md  (+36 more)
crates/orchestrator-cli/src/: cli_types.rs  main.rs  shared.rs
crates/orchestrator-cli/tests/: cli_e2e.rs  cli_happy_path_contract.rs  cli_json_contract.rs  cli_quickstart_validation.rs  cli_skill_lifecycle.rs  cli_smoke.rs  daemon_e2e.rs  init_e2e.rs  plugin_agent_run_e2e.rs  plugin_contract_e2e.rs  quick_start_gate.rs  rust_only_dependency_policy.rs  session_continuation_e2e.rs  setup_doctor_e2e.rs  workflow_state_machine_e2e.rs
crates/orchestrator-daemon-runtime/: Cargo.toml  README.md
crates/orchestrator-daemon-runtime/src/: audit.rs  build_runner_command_from_dispatch.rs  collect_requirement_lifecycle_transitions.rs  collect_task_state_transitions.rs  completed_process.rs  completion_reconciliation_plan.rs  daemon_git_merge.rs  daemon_git_runtime_refresh.rs  daemon_git_worktree.rs  default_daemon_run_host.rs  default_project_tick_driver.rs  dispatch_selection_source.rs  dispatch_support.rs  dispatch_workflow_start.rs  em_work_queue_state.rs  em_work_queue_store.rs  execute_project_tick_script.rs  git_ops.rs  hook_backed_project_tick_driver.rs  hook_backed_project_tick_operations.rs  inproc_subject_backend.rs  lib.rs  log_storage.rs  metrics.rs  process_manager.rs  project_tick_action.rs  (+37 more)
crates/orchestrator-logging/: Cargo.toml
crates/orchestrator-plugin-host/: Cargo.toml
crates/orchestrator-session-host/: Cargo.toml
crates/orchestrator-web-api/: Cargo.toml  README.md
crates/orchestrator-web-server/: Cargo.toml  README.md  openapi.json
crates/protocol/: Cargo.toml  README.md
crates/workflow-runner/: Cargo.toml  README.md
(+1146 files in other folders)
