[workspace]
members = [
  "crates/agent-runner",
  "crates/protocol",
  "crates/llm-cli-wrapper",
  "crates/llm-mcp-server",
  "crates/orchestrator-core",
  "crates/orchestrator-cli",
  "crates/orchestrator-web-contracts",
  "crates/orchestrator-web-api",
  "crates/orchestrator-web-server",
]
default-members = [
  "crates/orchestrator-cli",
  "crates/agent-runner",
  "crates/llm-cli-wrapper",
  "crates/llm-mcp-server",
]
resolver = "2"

[workspace.dependencies]
protocol = { path = "crates/protocol" }
llm-cli-wrapper = { path = "crates/llm-cli-wrapper" }
orchestrator-core = { path = "crates/orchestrator-core" }
orchestrator-web-contracts = { path = "crates/orchestrator-web-contracts" }
orchestrator-web-api = { path = "crates/orchestrator-web-api" }
orchestrator-web-server = { path = "crates/orchestrator-web-server" }
axum = "0.8"
