[workspace]
members = [
  "crates/agent-runner",
  "crates/protocol",
  "crates/llm-cli-wrapper",
  "crates/orchestrator-config",
  "crates/orchestrator-core",
  "crates/orchestrator-store",
  "crates/orchestrator-cli",
  "crates/orchestrator-web-contracts",
  "crates/orchestrator-web-api",
  "crates/orchestrator-web-server",
  "crates/oai-runner",
  "crates/workflow-runner",
  "crates/orchestrator-providers",
]
default-members = [
  "crates/orchestrator-cli",
  "crates/agent-runner",
  "crates/llm-cli-wrapper",
  "crates/oai-runner",
]
resolver = "2"

[workspace.dependencies]
protocol = { path = "crates/protocol" }
llm-cli-wrapper = { path = "crates/llm-cli-wrapper" }
orchestrator-config = { path = "crates/orchestrator-config" }
orchestrator-core = { path = "crates/orchestrator-core" }
orchestrator-providers = { path = "crates/orchestrator-providers" }
orchestrator-store = { path = "crates/orchestrator-store" }
orchestrator-web-contracts = { path = "crates/orchestrator-web-contracts" }
orchestrator-web-api = { path = "crates/orchestrator-web-api" }
orchestrator-web-server = { path = "crates/orchestrator-web-server" }
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
