[package]
name = "animus-plugin-protocol"
version = "0.1.0"
edition = "2021"
description = "Wire types for Animus stdio plugin protocol (JSON-RPC 2.0). Foundation crate every Animus plugin depends on."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
