[package]
name = "animus-plugin-protocol"
version = "0.1.0"
edition = "2021"
description = "Wire types for Animus stdio plugin protocol (JSON-RPC 2.0). Foundation crate every Animus plugin depends on."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "animus-plugin-protocol-export-schema"
path = "src/bin/export_schema.rs"

[lints]
workspace = true
