[package]
name = "animus-plugin-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "animus_plugin_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
animus-session-backend = { workspace = true }
animus-plugin-protocol = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
tracing = "0.1"

[lints]
workspace = true
