[package]
name = "animus-plugin-smoke"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "animus-plugin-smoke"
path = "src/main.rs"

[dependencies]
anyhow = "1"
animus-plugin-protocol = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }

[lints]
workspace = true
