[package]
name = "animus-provider-codex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "animus-provider-codex"
path = "src/main.rs"

[dependencies]
anyhow = "1"
animus-plugin-runtime = { path = "../animus-plugin-runtime" }
animus-session-backend = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }

[lints]
workspace = true
