[package]
name = "animus-provider-mock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "animus-provider-mock"
path = "src/main.rs"

[dependencies]
anyhow = "1"
animus-plugin-runtime = { path = "../animus-plugin-runtime" }
async-trait = "0.1"
animus-session-backend = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
