[package]
name = "animus-provider-protocol"
version = "0.1.0"
edition = "2021"
description = "ProviderBackend trait and request/response shapes for Animus LLM provider plugins (Claude, Codex, Gemini, OpenAI-compat, on-prem, etc.)."

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"

[lints]
workspace = true
