[package]
name = "animus-subject-protocol"
version = "0.1.0"
edition = "2021"
description = "SubjectBackend trait + normalized Subject schema for Animus subject backend plugins (Linear, Jira, GitHub Issues, Notion, native task store, etc.)."

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures-core = "0.3"
schemars = { version = "1.0", features = ["chrono04"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "animus-subject-protocol-export-schema"
path = "src/bin/export_schema.rs"

[lints]
workspace = true
