[package]
name = "ao-plugin-smoke"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ao-plugin-smoke"
path = "src/main.rs"

[dependencies]
anyhow = "1"
orchestrator-plugin-protocol = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }

[lints]
workspace = true
