[package]
name = "ao-provider-claude"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ao-provider-claude"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cli-wrapper = { path = "../llm-cli-wrapper", package = "llm-cli-wrapper" }
orchestrator-plugin-protocol = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
tracing = "0.1"

[lints]
workspace = true
