[package]
name = "ao-provider-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "ao_provider_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
cli-wrapper = { path = "../llm-cli-wrapper", package = "llm-cli-wrapper" }
orchestrator-plugin-protocol = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
tracing = "0.1"

[lints]
workspace = true
