[package]
name = "llm-cli-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "cli_wrapper"
path = "src/lib.rs"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "time"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Logging
tracing = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
orchestrator-logging = { path = "../orchestrator-logging" }
protocol = { path = "../protocol", features = ["test-utils"] }
tempfile = "3.8"

[lints]
workspace = true
