[package]
name = "llm-cli-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "cli_wrapper"
path = "src/lib.rs"

[dependencies]
# Core
animus-session-backend = { workspace = true }
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
orchestrator-logging = { path = "../orchestrator-logging" }
protocol = { path = "../protocol", features = ["test-utils"] }
tempfile = "3.8"

[lints]
workspace = true
