[package]
name = "llm-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llm-mcp-server"
path = "src/main.rs"

[lib]
name = "mcp_server"
path = "src/lib.rs"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# JSON-RPC / MCP Protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web server for HTTP transport
axum = { workspace = true, features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Search functionality
regex = "1.10"
walkdir = "2.4"
ignore = "0.4"  # For .gitignore support

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
