[package]
name = "orchestrator-cli"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "ao"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-web-api = { path = "../orchestrator-web-api" }
orchestrator-web-contracts = { path = "../orchestrator-web-contracts" }
orchestrator-web-server = { path = "../orchestrator-web-server", features = ["graphql"] }
protocol = { path = "../protocol" }
cli-wrapper = { path = "../llm-cli-wrapper", package = "llm-cli-wrapper" }
dirs = "5.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.15.0", features = ["transport-io"] }
schemars = "1.0"
fs2 = "0.4"
sha2 = "0.10"
semver = "1"
webbrowser = "1"
crossterm = "0.28"
ratatui = "0.29"
axum = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2"
protocol = { path = "../protocol", features = ["test-utils"] }
tempfile = "3"
toml = "0.8"
