[package]
name = "orchestrator-cli"
version = "0.4.20"
edition = "2021"
license = "Elastic-2.0"
default-run = "animus"

[[bin]]
name = "animus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "time", "net", "signal"] }
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-logging = { path = "../orchestrator-logging" }
orchestrator-plugin-host = { workspace = true }
animus-plugin-protocol = { workspace = true }
animus-control-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.13" }
animus-log-storage-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.13" }
animus-subject-protocol-wire = { package = "animus-subject-protocol", git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.13" }
# v0.5 plugin protocol crates — used by the plugin-host wrappers in
# `services::plugin_clients` to dispatch `workflow/*` and `queue/*` RPCs
# through installed `workflow_runner` / `queue` plugins. The transitively
# pulled `animus-subject-protocol` (v0.5.0 git source) is a distinct crate
# identity from the in-tree `protocol::SubjectDispatch`; wire formats
# remain byte-for-byte compatible per the Wave 1 handoff state.
animus-queue-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.5.0" }
animus-workflow-runner-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.5.0" }
animus-subject-protocol-v05 = { package = "animus-subject-protocol", git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.5.0" }
protocol = { path = "../protocol" }
animus-session-backend = { workspace = true }
which = "8"
orchestrator-session-host = { workspace = true }
orchestrator-daemon-runtime = { workspace = true }
orchestrator-notifications = { workspace = true }
workflow-runner-v2 = { path = "../workflow-runner-v2" }
orchestrator-config = { workspace = true }
dirs = "6.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.2", features = ["transport-io"] }
schemars = "1.0"
sha2 = "0.10"
semver = "1"
webbrowser = "1"
termimad = "0.34"
libc = "0.2"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
base64 = "0.22"
colored = "3.0"
tracing = "0.1"
tempfile = "3"
tar = "0.4"
flate2 = "1.0"
toml = "1.0"

[dev-dependencies]
assert_cmd = "2"
fs2 = "0.4"
protocol = { path = "../protocol", features = ["test-utils"] }
tempfile = "3"
toml = "1.0"

[lints]
workspace = true
