[package]
name = "orchestrator-daemon-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator_daemon_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
croner = { workspace = true }
orchestrator-core = { workspace = true }
protocol = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-util", "process", "rt", "macros", "time"] }
workflow-runner = { path = "../workflow-runner" }

[dev-dependencies]
tempfile = "3"
