[package]
name = "orchestrator-daemon-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator_daemon_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
croner = { workspace = true }
fs2 = "0.4"
orchestrator-core = { workspace = true }
orchestrator-providers = { workspace = true }
protocol = { workspace = true }
dirs = "5.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "process", "rt", "macros", "signal", "time"] }
uuid = { version = "1", features = ["v4"] }
workflow-runner = { path = "../workflow-runner" }

[dev-dependencies]
protocol = { workspace = true, features = ["test-utils"] }
tempfile = "3"
