[package]
name = "orchestrator-daemon-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator_daemon_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
croner = { workspace = true }
fs2 = "0.4"
futures-core = "0.3"
futures-util = "0.3"
glob = "0.3"
orchestrator-core = { workspace = true }
orchestrator-logging = { workspace = true }
orchestrator-plugin-host = { workspace = true }
orchestrator-session-host = { workspace = true }
animus-plugin-protocol = { workspace = true }
animus-control-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.11" }
animus-log-storage-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.11" }
# We use Subject / SubjectChangedEvent from the same v0.1.10 surface the
# control-protocol references. Pulled from the same git tag so the
# protocol versions stay in lockstep; the in-tree
# `animus-subject-protocol` 0.1.0 remains the version subject backends /
# inproc adapters use, and the daemon translates at the boundary.
animus-subject-protocol-wire = { package = "animus-subject-protocol", git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.11" }
protocol = { workspace = true }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "process", "rt", "macros", "net", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
workflow-runner-v2 = { path = "../workflow-runner-v2" }

[dev-dependencies]
protocol = { workspace = true, features = ["test-utils"] }
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "signal", "test-util", "time"] }
animus-control-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.11", features = ["client"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
animus-subject-protocol-wire = { package = "animus-subject-protocol", git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.11" }
workflow-runner-v2 = { path = "../workflow-runner-v2" }

[lints]
workspace = true
