[package]
name = "orchestrator-logging"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
protocol = { path = "../protocol" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

[dev-dependencies]
protocol = { path = "../protocol", features = ["test-utils"] }
tempfile = "3"
