[package]
name = "orchestrator-plugin-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
animus-plugin-protocol = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
semver = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["io-util", "process", "rt", "macros", "time", "sync"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
# Used by the `protocol_drift` integration test to parse the in-tree and
# standalone `animus-plugin-protocol` crates and diff their public surfaces.
# Kept as a dev-dep so we don't pull syn into the production binary.
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
proc-macro2 = "1"

[lints]
workspace = true
