[package]
name = "orchestrator-session-host"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
name = "orchestrator_session_host"
path = "src/lib.rs"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "time"] }
async-trait = "0.1"

# Session trait + types + native backends are sourced from the upstream
# `animus-session-backend` crate.
animus-session-backend = { workspace = true }

orchestrator-logging = { workspace = true }
orchestrator-plugin-host = { workspace = true }
animus-plugin-protocol = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
animus-session-backend = { workspace = true }

[lints]
workspace = true
