[package]
name = "orchestrator-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
animus-control-protocol = { git = "https://github.com/launchapp-dev/animus-protocol", tag = "v0.1.4" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
orchestrator-config = { path = "../orchestrator-config" }
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-daemon-runtime = { path = "../orchestrator-daemon-runtime" }
orchestrator-web-contracts = { path = "../orchestrator-web-contracts" }
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
