[package]
name = "orchestrator-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { workspace = true, features = ["macros"] }
include_dir = "0.7"
mime_guess = "2"
orchestrator-web-api = { path = "../orchestrator-web-api" }
orchestrator-web-contracts = { path = "../orchestrator-web-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
orchestrator-core = { path = "../orchestrator-core" }
tower = { version = "0.5", features = ["util"] }
