[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
sha2 = "0.10"

[dev-dependencies]
schemars = "0.8"
tempfile = "3"
