[package]
name = "workflow-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ao-workflow-runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
