[package]
name = "workflow-runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "workflow_runner"
path = "src/lib.rs"

[[bin]]
name = "ao-workflow-runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

protocol = { path = "../protocol" }
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-config = { workspace = true }
cli-wrapper = { path = "../llm-cli-wrapper", package = "llm-cli-wrapper" }
termimad = "0.30"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
