[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "animus-plugin-sdk"
version = "0.1.0"
description = "Python SDK for authoring Animus stdio plugins (subject backends, providers, triggers, transports, log storage)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Elastic-2.0" }
authors = [{ name = "Animus" }]
keywords = ["animus", "plugin", "sdk", "json-rpc", "stdio", "agent-orchestrator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.5",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.10",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/launchapp-dev/animus"
Documentation = "https://github.com/launchapp-dev/animus/tree/main/docs"
Issues = "https://github.com/launchapp-dev/animus/issues"

[tool.hatch.build.targets.wheel]
packages = ["animus_plugin_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"animus_plugin_sdk/py.typed" = "animus_plugin_sdk/py.typed"

[tool.hatch.build.targets.sdist]
include = [
  "animus_plugin_sdk",
  "tests",
  "README.md",
  "pyproject.toml",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
